Update things to latest android studio.

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -13,3 +13,17 @@
 
 // Include common definitions from above.
 apply from: '../build.common.gradle'
+
+buildscript {
+    repositories {
+        google()
+        jcenter()
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        jcenter()
+    }
+}
