--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,17 @@
  */
 buildscript {
     repositories {
-        jcenter()
         google()
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
     }
 }
 
-
+allprojects {
+    repositories {
+        google()
+        jcenter()
+    }
+}
